# doujin-toshokan

./: .gitignore  CLAUDE.md  README.md  app.go  app_test.go  assets.go  chain_test.go  doujin.spec  go.mod  go.sum  main.go  matchsource_test.go  nhentai.go  nhentai_test.go  providers.go  providers_test.go  pyproject.toml  tagging.go  wails.json
docs/: ARCHITECTURE.md  MULTI_SOURCE_ROADMAP.md  UX_POLISH_PLAN.md
doujin/: __main__.py  app.py  cli.py  config.py  ingest.py  paths.py  search.py  thumbnails.py
doujin/static/: app.js  style.css
doujin/templates/: base.html  import_all.html  library.html  scan.html  title.html
frontend/: index.html
frontend/src/: main.ts  theme.css
internal/archive/: archive.go  archive_test.go
internal/autotag/: match.go  match_test.go
internal/config/: config.go  config_test.go
internal/doujin/: parse.go  parse_test.go
internal/ehentai/: client.go  client_test.go
internal/embedmeta/: embedmeta.go  embedmeta_test.go
internal/hitomi/: client.go  client_test.go
internal/imagefile/: imagefile.go
internal/ingest/: ingest.go  ingest_test.go
internal/mangadex/: client.go  client_test.go
internal/nhentai/: client.go  client_test.go
internal/paths/: paths.go  paths_test.go
internal/scanner/: scanner.go  scanner_test.go
internal/search/: search.go  search_test.go
internal/source/: source.go
internal/stash/: stash.go  stash_test.go
internal/store/: store.go  store_test.go
internal/tag/: tag.go  (+1 more)
legacy/: README.md
tests/: conftest.py  test_app.py  test_config.py  test_db.py  test_ingest.py  test_search.py
(+22 files in other folders)
