[project]
name = "doujin"
version = "0.1.0"
description = "Doujin Bunko — a local, offline manga library and viewer"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "jinja2>=3.1",
    "pillow>=10.0",
    "python-multipart>=0.0.9",
    "platformdirs>=4.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27", "ruff>=0.15"]
build = ["pyinstaller>=6.0"]

[project.scripts]
doujin = "doujin.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["doujin*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I import-sort, UP pyupgrade, B bugbear.
select = ["E", "W", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection idiom puts these calls in parameter defaults
# on purpose; they are not the accidental-shared-default that B008 guards against.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Form"]

[tool.ruff.lint.per-file-ignores]
# app.py route handlers use `param: Annotated[list[str], Query()] = []`. The
# mutable default is safe under FastAPI (it injects per-request and never
# mutates it), so B006 is a false positive scoped to this file only.
"doujin/app.py" = ["B006"]

